Project junkio_expense_tracker {
  database_type: 'PostgreSQL'

  Note: '''
  DBML nay duoc toi uu de import vao dbdiagram.io.
  Day la ban trinh bay chuan hoa cho bao cao:
  - Tat ca ten bang va cot duoc dua ve snake_case.
  - Cac cot camelCase trong code da duoc doi thanh snake_case cho de doc.
  - recurring_patterns van duoc noi quan he theo model, du migration hien tai chua enforce day du FK o cap database.
  '''
}

Table users {
  id uuid [pk, not null]
  name varchar [not null]
  email varchar [not null, unique]
  password_hash varchar [not null]
  role varchar [not null, default: 'member']
  avatar varchar
  is_locked boolean [not null, default: false]
  reset_password_token varchar
  reset_password_expires timestamptz
  created_at timestamptz [not null]
  updated_at timestamptz [not null]

  Note: '''
  Bang tai khoan nguoi dung trung tam cho he thong.
  Bao gom thong tin dang nhap, phan quyen va du lieu phuc vu khoa tai khoan / dat lai mat khau.
  '''

  indexes {
    (email) [unique, name: 'users_email_unique']
  }
}

Table families {
  id uuid [pk, not null]
  owner_id uuid [not null]
  name varchar [not null]
  created_at timestamptz [not null]
  updated_at timestamptz [not null]

  Note: '''
  Don vi chi tieu chung cua gia dinh / nhom.
  owner_id xac dinh chu so huu chinh cua family.
  '''
}

Table family_members {
  id uuid [pk, not null]
  family_id uuid [not null]
  user_id uuid [not null]
  role varchar [default: 'member']
  joined_at timestamptz
  created_at timestamptz [not null]
  updated_at timestamptz [not null]

  Note: '''
  Bang lien ket many-to-many giua users va families.
  He thong hien dung surrogate key id, khong dung composite primary key.
  '''
}

Table categories {
  id uuid [pk, not null]
  name varchar [not null]
  type varchar [not null]
  parent_id uuid
  icon varchar
  created_at timestamptz [not null]
  updated_at timestamptz [not null]

  Note: '''
  Danh muc thu/chi dung chung cho he thong.
  parent_id cho phep tao cay danh muc cha - con.
  '''
}

Table wallets {
  id uuid [pk, not null]
  name varchar [not null]
  balance decimal(15,2) [not null, default: 0]
  currency varchar [not null, default: 'VND']
  user_id uuid [not null]
  family_id uuid
  created_at timestamptz [not null]
  updated_at timestamptz [not null]

  Note: '''
  Vi co the thuoc ca nhan hoac gia dinh.
  Trong PostgreSQL that, ten vi duoc rang buoc unique theo user/family bang partial case-insensitive indexes.
  '''
}

Table transactions {
  id uuid [pk, not null]
  amount decimal(15,2) [not null]
  date timestamptz [not null]
  description varchar
  type varchar [not null]
  wallet_id uuid [not null]
  category_id uuid
  user_id uuid [not null]
  family_id uuid
  transfer_group_id uuid
  created_at timestamptz [not null]
  updated_at timestamptz [not null]

  Note: '''
  Bang giao dich trung tam cua he thong.
  transfer_group_id duoc dung de gom cac cap giao dich chuyen tien, khong phai FK.
  '''

  indexes {
    (transfer_group_id) [name: 'transactions_transfer_group_id_idx']
  }
}

Table transaction_shares {
  id uuid [pk, not null]
  transaction_id uuid [not null]
  user_id uuid [not null]
  amount decimal(15,2) [not null]
  status varchar [default: 'UNPAID']
  approval_status varchar [not null, default: 'PENDING']
  created_at timestamptz [not null]
  updated_at timestamptz [not null]

  Note: '''
  Bang chia giao dich cho nhieu thanh vien.
  Dung de xu ly bai toan chi tieu chung, no chung va xac nhan thanh toan.
  '''
}

Table budgets {
  id uuid [pk, not null]
  amount_limit decimal(15,2) [not null]
  start_date date [not null]
  end_date date [not null]
  category_id uuid [not null]
  family_id uuid
  user_id uuid
  created_at timestamptz [not null]
  updated_at timestamptz [not null]

  Note: '''
  Ngan sach co the ap dung theo ca nhan hoac gia dinh.
  category_id la bat buoc de theo doi ngan sach theo danh muc.
  '''

  indexes {
    (family_id) [name: 'budgets_family_id_idx']
    (user_id) [name: 'budgets_user_id_idx']
  }
}

Table goals {
  id uuid [pk, not null]
  name varchar [not null]
  target_amount decimal(15,2) [not null, default: 0]
  current_amount decimal(15,2) [not null, default: 0]
  deadline timestamptz
  color_code varchar [default: '#3b82f6']
  image_url varchar [default: 'Target']
  status varchar [default: 'IN_PROGRESS']
  user_id uuid [not null]
  created_at timestamptz [not null]
  updated_at timestamptz [not null]

  Note: '''
  Muc tieu tiet kiem ca nhan.
  Hien tai bang nay chi lien ket truc tiep voi user, khong gan family trong schema that.
  '''
}

Table notifications {
  id uuid [pk, not null]
  type varchar [not null]
  title varchar [not null, default: 'Notification']
  message text [not null]
  is_read boolean [not null, default: false]
  user_id uuid [not null]
  reference_id uuid
  created_at timestamptz [not null]
  updated_at timestamptz [not null]

  Note: '''
  Thong bao he thong, nhac nho va canh bao.
  reference_id la khoa tham chieu logic, co the tro ve doi tuong nghiep vu lien quan.
  '''

  indexes {
    (user_id) [name: 'notifications_user_id_idx']
    (user_id, type, reference_id, created_at) [name: 'notifications_budget_dedupe_idx']
  }
}

Table recurring_patterns {
  id uuid [pk, not null]
  user_id uuid [not null]
  wallet_id uuid [not null]
  category_id uuid
  amount decimal [not null]
  type varchar [not null]
  description varchar
  frequency varchar [not null]
  next_run_date date [not null]
  is_active boolean [default: true]
  created_at timestamptz [not null]
  updated_at timestamptz [not null]

  Note: '''
  Mau giao dich dinh ky de sinh giao dich tu dong.
  Quan he voi users, wallets, categories duoc the hien ro trong model Sequelize.
  Migration hien tai chua khai bao day du cac FK nay o cap database.
  '''
}

Table audit_logs {
  id uuid [pk, not null]
  user_id uuid
  family_id uuid
  action varchar [not null]
  entity_type varchar
  entity_id varchar
  old_value jsonb
  new_value jsonb
  ip_address varchar
  created_at timestamptz [not null]
  updated_at timestamptz [not null]

  Note: '''
  Luu vet cac thao tac quan trong de audit va truy vet he thong.
  old_value va new_value duoc luu duoi dang JSONB.
  '''
}

TableGroup "Identity and Collaboration" {
  users
  families
  family_members
  notifications
  audit_logs
}

TableGroup "Finance Core" {
  categories
  wallets
  transactions
  transaction_shares
}

TableGroup "Planning and Automation" {
  budgets
  goals
  recurring_patterns
}

Ref: families.owner_id > users.id

Ref: family_members.family_id > families.id
Ref: family_members.user_id > users.id

Ref: categories.parent_id > categories.id

Ref: wallets.user_id > users.id
Ref: wallets.family_id > families.id

Ref: transactions.wallet_id > wallets.id
Ref: transactions.category_id > categories.id
Ref: transactions.user_id > users.id
Ref: transactions.family_id > families.id

Ref: transaction_shares.transaction_id > transactions.id
Ref: transaction_shares.user_id > users.id

Ref: budgets.category_id > categories.id
Ref: budgets.family_id > families.id
Ref: budgets.user_id > users.id

Ref: goals.user_id > users.id

Ref: notifications.user_id > users.id

// Logical refs from model layer; not fully enforced by the current migration
Ref: recurring_patterns.user_id > users.id
Ref: recurring_patterns.wallet_id > wallets.id
Ref: recurring_patterns.category_id > categories.id

Ref: audit_logs.user_id > users.id
Ref: audit_logs.family_id > families.id
